<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".login.activity.LoginPasswordActivity">

    <com.kentreyhan.commons.widgets.appbar.CustomAppBar
        android:id="@+id/passwordAppBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:backButtonDrawable="@drawable/ic_back"/>

    <TextView
        android:id="@+id/passwordTitle"
        style="@style/ViewTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:paddingHorizontal="16dp"
        android:ellipsize="end"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="@+id/passwordAppBar"
        app:layout_constraintTop_toBottomOf="@+id/passwordAppBar"
        android:text="@string/password_title" />

    <com.kentreyhan.commons.widgets.textfield.CustomTextField
        android:id="@+id/passwordTextField"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTitle"
        android:hint="@string/password_hint"
        android:imeOptions="actionDone"
        android:inputType="textPassword" />

    <com.kentreyhan.commons.widgets.button.CTAButton
        android:id="@+id/passwordActionButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:paddingHorizontal="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordTextField"
        app:labelActionButton="@string/ok"/>

    <com.kentreyhan.commons.widgets.button.TextButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/passwordActionButton"
        app:labelTextButton="@string/forgot_password_text_button"/>

    <ProgressBar
        android:id="@+id/loadingIndicator"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

