<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".login.activity.LoginEmailActivity" >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primary"
        android:padding="16dp" >

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="136dp"
            android:src="@drawable/logo"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/labelText"
            style="@style/LabelText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:textColor="@color/white"
            app:layout_constraintBottom_toTopOf="@+id/emailTextFieldLayout"
            app:layout_constraintStart_toStartOf="@+id/emailTextFieldLayout"
            android:text="@string/email_label" />

        <ImageView
            android:id="@+id/leadingIcon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_gravity="center"
            android:src="@drawable/ic_email"
            app:layout_constraintBottom_toBottomOf="@+id/emailTextFieldLayout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/emailTextFieldLayout" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/emailTextFieldLayout"
            style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="372dp"
            app:boxStrokeWidth="1dp"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxStrokeColor="@color/box_stroke_white"
            app:boxStrokeErrorColor="@color/red"
            app:hintEnabled="false"
            app:errorIconDrawable="@null"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/leadingIcon"
            app:layout_constraintTop_toBottomOf="@+id/imageView">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/emailTextField"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                style="@style/TextFieldStyle.white"
                android:background="@android:color/transparent"
                android:clickable="false"
                android:gravity="top"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress"
                android:paddingStart="8dp"
                android:paddingEnd="0dp"/>

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/errorTextEmail"
            style="@style/LabelText.Red"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/red"
            android:visibility="gone"
            app:layout_constraintStart_toStartOf="@+id/emailTextFieldLayout"
            app:layout_constraintTop_toBottomOf="@+id/emailTextFieldLayout"
            android:text="@string/error_placeholder" />

        <com.kentreyhan.commons.widgets.button.CTAButton
            android:id="@+id/emailActionButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:paddingHorizontal="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailTextFieldLayout"
            app:labelActionButton="@string/sign_in"/>

        <com.kentreyhan.commons.widgets.button.TextButton
            android:id="@+id/registerTextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailActionButton"
            app:labelTextButton="@string/create_new_account_text_button"
            app:labelTextButtonColor="@color/white"/>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>



